# zephyr-az3166-angle-finder

./: CMakeLists.txt  prj.conf
src/: main.c
